added alternative text for images

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- Start of Navbar -->
   <div class="container" id="page-top">
     <nav class="navbar fixed-top navbar-expand-md">
-      <img src="assets/images/mosquito-favicon-no.png" alt="mosquito" class="moz-brand" />
+      <img src="assets/images/mosquito-favicon-no.png" alt="small icon of a no mosquito" class="moz-brand" />
       <a href="#" class="navbar-toggler hamburger hamburger-animation" data-toggle="collapse"
         data-target="#navbarNavAltMarkup"><span></span></a>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -38,7 +38,7 @@
   <!-- Mozzie Wipeout Image -->
   <div class="container-fluid">
     <div class="mozzie-wipeout">
-      <img src="assets/images/do-the-5-step-mw-banner.jpg" alt="" />
+      <img src="assets/images/do-the-5-step-mw-banner.jpg" alt="big banner of 5 steps to wipeout mosquito" />
     </div>
   </div>
 
@@ -73,7 +73,7 @@
         <div class="dengue-cases" id="dengue-cases">
           <h4>Dengue cases</h4>
           <div class="mosq-div">
-            <img src="assets/images/mosquito1.png" alt="" class="mosq-icon" />
+            <img src="assets/images/mosquito1.png" alt="mosquito with thin legs and long wings" class="mosq-icon" />
           </div>
           <!-- <span class="number-cases"> -->
           <div class="cases-div">
@@ -123,7 +123,7 @@
           </p>
           <p>
             If you think you have dengue fever,
-            <a href="http://www.doctors.com.sg/">seek medical attention immediately.</a>
+            <a href="http://www.doctors.com.sg/" target="_blank">seek medical attention immediately.</a>
           </p>
         </div>
       </div>
@@ -255,15 +255,16 @@
   <div class="container-fluid footer-div">
     <footer class="footer">
       <div class="footer-icons">
-        <a href="https://github.com/Paddlepop25"><i class="fab fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/lindahsu007/"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://twitter.com/shecodeshsucode"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/Paddlepop25" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/lindahsu007/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://twitter.com/shecodeshsucode" target="_blank"><i class="fab fa-twitter"></i></a>
         <a href="https://www.instagram.com/shecodeshsucodes/" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
       <p>
         &copy; Designed by Linda Hsu, 2019
         <a href="https://www.moh.gov.sg/diseases-updates/dengue" target="_blank"><img
-            src="assets/images/mosquito-favicon-big.png" alt="" class="footer-mosq" />
+            src="assets/images/mosquito-favicon-big.png" alt="small icon of a mosquito sucking blood"
+            class="footer-mosq" />
         </a>
       </p>
       <small>For educational purpose</small>
