added a small text

--- a/index.html
+++ b/index.html
@@ -158,6 +158,8 @@
       <h3>
         Click a zone to view it's surrounding dengue cluster
       </h3>
+      <small>* Data is provided by the <a href="https://data.gov.sg/search?q=dengue"> National Environment Agency of
+          Singapore</a></small>
       <div class="zonebtns" id="zonebtns">
         <div class="row">
           <div class="col-6 col-md-3">
