added html,css,js validators in readme

--- a/index.html
+++ b/index.html
@@ -97,12 +97,11 @@
             <li>Skin rashes</li>
             <li>Nausea and vomiting</li>
             <li>Mild bleeding (e.g. nose or gum bleed) or easy bruising</li>
-            <br />
-            <p>
-              Symptoms usually appear 4-7 days after being bitten (ranges from
-              3-14 days).
-            </p>
           </ul>
+          <p>
+            Symptoms usually appear 4-7 days after being bitten <br>(ranges from
+            3-14 days).
+          </p>
         </div>
       </div>
 
