trying out mousehover over google map pins to show infowindow

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
 <body>
   <!-- Start of Navbar -->
-  <div class="container" id="page-top">
+  <div id="page-top"></div>
+  <div class="container">
     <nav class="navbar fixed-top navbar-expand-md">
       <img src="assets/images/mosquito-favicon-no.png" alt="small icon of a no mosquito" class="moz-brand" />
       <a href="#" class="navbar-toggler hamburger hamburger-animation" data-toggle="collapse"
