--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
           Select an option to see the nearby 20 places for medical supplies
           and services on the Google map above.
         </p>
+        <p>Click or hover on the location pins for more information.</p>
         <p>
           Scroll down further to see an expanded list of the option selected.
         </p>
