changed all rgb colors to hexidecimal #

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           Select an option to see the nearby 20 places for medical supplies
           and services on the Google map above.
         </p>
-        <p><i>Click</i> or <i>hover</i> on the location pins for more information.</p>
+        <p><i>Click</i> or <i>hover</i> on the location markers <i class="fas fa-map-marker-alt"></i>for more information.</p>
         <p>
           Scroll down further to see an expanded list of the option selected.
         </p>
