changed classes names to be more appropriate

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
   <!-- Start of Navbar -->
-  <div id="page-top"></div>
+  <div id="aboveMozImage"></div>
   <div class="container">
     <nav class="navbar fixed-top navbar-expand-md">
       <img src="assets/images/mosquito-favicon-no.png" alt="small icon of a no mosquito" class="moz-brand" />
@@ -26,10 +26,10 @@
         data-target="#navbarNavAltMarkup"><span></span></a>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="#page-top">Home</a>
+          <a class="nav-item nav-link" href="#aboveMozImage">Home</a>
           <a class="nav-item nav-link" href="#aboveAboutDengue">Dengue Update</a>
-          <a class="nav-item nav-link" href="#abovezones">Dengue Clusters</a>
-          <a class="nav-item nav-link" href="#amenities">Amenities Near You</a>
+          <a class="nav-item nav-link" href="#aboveZones">Dengue Clusters</a>
+          <a class="nav-item nav-link" href="#aboveAmenities">Amenities Near You</a>
         </div>
       </div>
     </nav>
@@ -78,9 +78,9 @@
           </div>
           <!-- <span class="number-cases"> -->
           <div class="cases-div">
-            <span class="reported-cases">29</span>
+            <span class="reported-cases">19</span>
             <span>cases notified as at</span><br />
-            <span>10 Dec 2019 at 3pm</span>
+            <span>14 Dec 2019 at 3pm</span>
           </div>
         </div>
       </div>
@@ -147,12 +147,12 @@
     </div>
   </div>
 
-  <!-- In between Dengue information and Select zone -->
+  <!-- Above Select zones -->
   <div class="container">
-    <div id="abovezones"></div>
+    <div id="aboveZones"></div>
   </div>
 
-  <!-- Start of Select Zone -->
+  <!-- Start of Select Zones -->
   <div class="container">
     <div class="select-zone" id="select-zone">
       <h3>
@@ -160,7 +160,8 @@
         <br>
         Click on the boxes/polygram on the map for more information
       </h3>
-      <small>* Data is provided by the <a href="https://data.gov.sg/search?q=dengue"> National Environment Agency of
+      <small>* Data is provided by the <a href="https://data.gov.sg/search?q=dengue" target="_blank"> National
+          Environment Agency of
           Singapore</a></small>
       <div class="zonebtns" id="zonebtns">
         <div class="row">
@@ -203,11 +204,11 @@
   </div>
 
   <!-- Above Amenities Card -->
-  <div id="amenities"></div>
+  <div id="aboveAmenities"></div>
 
   <!-- Amenities Card -->
   <div class="container">
-    <div class="card eastcard">
+    <div class="card amenitiesCard">
       <div class=" card-body">
         <h4 class="card-title">Amenities near you</h4>
         <p class="card-text">
