added underline to let users see zone, boxes and polygram clearer

--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
   <div class="container">
     <div class="select-zone" id="select-zone">
       <h3>
-        Click on a zone to view it's surrounding dengue cluster
+        Click on a <u>zone</u> below to view it's surrounding dengue cluster
         <br>
-        Click on the boxes/polygram on the map for more information
+        Click on the <u>boxes/polygram</u> on the map for more information
       </h3>
       <small>* Data is provided by the <a href="https://data.gov.sg/search?q=dengue" target="_blank"> National
           Environment Agency of
