reworded some text

--- a/index.html
+++ b/index.html
@@ -156,10 +156,12 @@
   <div class="container">
     <div class="select-zone" id="select-zone">
       <h3>
-        Click on a <u>zone</u> below to view it's surrounding dengue cluster
-        <br>
-        Click on the <u>boxes/polygram</u> on the map for more information
+        Click to select the following options:
       </h3>
+      <span>Zones</u></span>: To view it's surrounding dengue cluster
+      <br>
+      <span>Boxes/Polygram on Map</span>: For more information
+      <br>
       <small>* Data is provided by the <a href="https://data.gov.sg/search?q=dengue" target="_blank"> National
           Environment Agency of
           Singapore</a></small>
@@ -246,7 +248,7 @@
         </div>
         <br />
         <p>
-          Select an option to see the nearby 20 places for medical supplies
+          Select an option for up to 20 nearby places for medical supplies
           and services on the Google map above.
         </p>
         <p><i>Click</i>or <i>hover</i>on the location markers <i class="fas fa-map-marker-alt"></i>for more information.
