added #navbarNavAltMarkup in navbar to prevent error in console

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
     <nav class="navbar fixed-top navbar-expand-md">
       <img src="assets/images/mosquito-favicon-no.png" alt="small icon of a no mosquito" class="moz-brand" />
-      <a href="#" class="navbar-toggler hamburger hamburger-animation" data-toggle="collapse"
+      <a href="#navbarNavAltMarkup" class="navbar-toggler hamburger hamburger-animation" data-toggle="collapse"
         data-target="#navbarNavAltMarkup"><span></span></a>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
