--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a class="nav-item nav-link" href="#aboveMozImage">Home</a>
           <a class="nav-item nav-link" href="#aboveAboutDengue">Dengue Update</a>
           <a class="nav-item nav-link" href="#aboveZones">Dengue Clusters</a>
-          <a class="nav-item nav-link" href="#aboveAmenities">Amenities Near You</a>
+          <a class="nav-item nav-link" href="#aboveAmenities">Nearby Amenities</a>
         </div>
       </div>
     </nav>
@@ -212,7 +212,7 @@
   <div class="container">
     <div class="card amenitiesCard">
       <div class=" card-body">
-        <h4 class="card-title">Amenities near you</h4>
+        <h4 class="card-title">Nearby Amenities</h4>
         <p class="card-text">
           Are you or your loved ones suffering from dengue fever?
         </p>
