--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <h3>
         Click to select the following options:
       </h3>
-      <span>Zones</u></span>: To view it's surrounding dengue cluster
+      <span>Zones</span>: To view it's surrounding dengue cluster
       <br>
       <span>Boxes/Polygram on Map</span>: For more information
       <br>
