added icon on table headers for all places

--- a/index.html
+++ b/index.html
@@ -237,13 +237,13 @@
             <a href="#zonebtns" class="card-link laundromats"><i class="fas fa-tshirt"></i>Laundromats</a>
           </div>
           <div class="col-md-4 col-lg-3">
-            <a href="#zonebtns" class="card-link shopping"><i class="fas fa-building"></i>Shopping Malls</a>
+            <a href="#zonebtns" class="card-link shopping"><i class="fas fa-store"></i>Shopping Malls</a>
           </div>
           <div class="col-lg-3 d-none d-lg-block">
             <a href="#zonebtns" class="card-link insurance"><i class="fas fa-landmark"></i>Insurance agencies</a>
           </div>
           <div class="col-lg-3 d-none d-lg-block">
-            <a href="#zonebtns" class="card-link funeral"><i class="fas fa-store"></i>Funeral</a>
+            <a href="#zonebtns" class="card-link funeral"><i class="fas fa-heart-broken"></i>Funeral</a>
           </div>
         </div>
         <br />
