trying out random mosquito and splat

--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
   <!-- Google Map -->
   <div class="container-fluid">
     <div id="map"></div>
+  </div>`
+
+  <div class="random-mosquito">
+    <img src="assets/images/mosquito-favicon-big.png" alt="small icon of a mosquito sucking blood"
+      class="small-mosquito" />
   </div>
 
   <!-- Above Amenities Card -->
@@ -251,7 +256,8 @@
           Select an option for up to 20 nearby places for medical supplies
           and services on the Google map above.
         </p>
-        <p><i>Click</i>or <i>hover</i>on the location markers <i class="fas fa-map-marker-alt"></i>for more information.
+        <p><i>Click</i>or <i>hover your mouse</i>on the location markers <i class="fas fa-map-marker-alt"></i>for more
+          information.
         </p>
         <p>
           Scroll down further to see an expanded list of the option selected.
@@ -276,7 +282,7 @@
         &copy; Designed by Linda Hsu, 2019
         <a href="https://www.moh.gov.sg/diseases-updates/dengue" target="_blank"><img
             src="assets/images/mosquito-favicon-big.png" alt="small icon of a mosquito sucking blood"
-            class="footer-mosq" />
+            class="small-mosq" />
         </a>
       </p>
       <small>For educational purpose</small>
