introduced another random mosquito

--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@
     <div id="aboveZones"></div>
   </div>
 
+  <!-- Random mosquito 1 -->
+  <div class="random-mosquito">
+      <img src="assets/images/mosquito-favicon-big.png" alt="small icon of a mosquito sucking blood"
+        class="small-mosquito1" />
+    </div>
+
   <!-- Start of Select Zones -->
   <div class="container">
     <div class="select-zone" id="select-zone">
@@ -203,11 +209,12 @@
   <!-- Google Map -->
   <div class="container-fluid">
     <div id="map"></div>
-  </div>`
+  </div>
 
+  <!-- Random mosquito 2 -->
   <div class="random-mosquito">
     <img src="assets/images/mosquito-favicon-big.png" alt="small icon of a mosquito sucking blood"
-      class="small-mosquito" />
+      class="small-mosquito2" />
   </div>
 
   <!-- Above Amenities Card -->
@@ -309,6 +316,7 @@
   <!--Own js file-->
   <script src="assets/scripts/app.js"></script>
   <script src="assets/scripts/scrolling-effect.js"></script>
+  <script src="assets/scripts/random-mosquito.js"></script>
   <script src="assets/scripts/dengue-clusters.js"></script>
   <script src="assets/scripts/places/clinic.js"></script>
   <script src="assets/scripts/places/pharmacy.js"></script>
